--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Backroads 2025 Itinerary</title>
+    <!-- Favicon link pointing to the provided image -->
+    <link rel="icon" type="image/jpeg" href="TheBackroads Bunch.jpeg">
     <!-- Use Tailwind CSS for a clean, responsive design -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Use Font Awesome for icons to make it visual -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <!-- Import Google Font for the title -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <style>
         /* The main body text will use Inter for readability */
         body {
@@ -67,50 +65,16 @@
             max-height: 80%;
             overflow-y: auto;
         }
-        /* Video Intro Modal Styles */
-        .video-modal {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-            z-index: 2000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            opacity: 1;
-            transition: opacity 1s ease-in-out;
-        }
-        .video-modal video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        .hidden-content {
-            display: none;
-        }
-        .fade-out {
-            opacity: 0;
-            pointer-events: none;
-        }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
-    <!-- Video Intro Modal -->
-    <div id="video-intro-modal" class="video-modal">
-        <video id="intro-video" src="BROpen.MP4" autoplay muted playsinline></video>
-    </div>
-
     <!-- Main Content -->
-    <div id="main-content" class="hidden-content">
+    <div id="main-content">
         <div class="container mx-auto p-8 lg:p-12">
             <!-- Main Header Section -->
             <header class="text-center mb-12">
-                <h1 class="text-4xl font-extrabold text-gray-900 leading-tight tracking-wider transition-all duration-300 transform hover:scale-105 title-font">
-                    <i class="fas fa-plane-departure text-purple-600 mr-2"></i>
-                    <span class="bg-gradient-to-r from-blue-500 to-purple-600 bg-clip-text text-transparent">Backroads Bunch 2025</span>
-                </h1>
+                <!-- Replaced the h1 with an image from the provided file -->
+                <img src="TheBackroads Bunch.jpeg" alt="The Backroads Bunch 2025" class="mx-auto my-4 w-auto h-32 md:h-48">
                 <p class="text-xl text-gray-600 mt-2">Lisbon, Porto, and Azores</p>
                 <p class="text-sm text-gray-500 mt-1">August 24 - September 6, 2025</p>
                 <p class="text-sm text-gray-500 mt-1 font-bold">Fishkind • Kirschner • Sheffman • Singer</p>
@@ -448,50 +412,26 @@
     </div>
 
     <script>
+        const modalData = {
+            'modal-link-flight1': { title: 'Flight Details', content: 'Airline: Delta<br>Flight #: 1707<br>Notes: DTW-BOS' },
+            'modal-link-flight2': { title: 'Flight Details', content: 'Airline: Delta<br>Flight #: 0124<br>Notes: BOS-LIS' },
+            'modal-link-hotel1': { title: 'Accommodation Details', content: 'Details: All 4 under AMF<br>Confirmation #: Expedia 73118888601825<br><br><b>Hotel Website:</b><br><a href="https://www.hoteldabaixa.com/en/" target="_blank" class="text-blue-500 hover:underline">https://www.hoteldabaixa.com/en/</a>' },
+            'modal-link-activity1': { title: 'Activity Details', content: 'Notes: free cancellation' },
+            'modal-link-activity2': { title: 'Activity Details', content: 'Notes: Nuno Tuk, 420 Euros' },
+            'modal-link-explore': { title: 'Open--Explore Lisbon Details', content: 'Possible places to explore: Pink & Green Streets, Arch. Note: via What\'s App' },
+            'modal-link-activity3': { title: 'Activity Details', content: 'Notes: Tour Booked with Carlos.<br>Link: <a href="https://www.premiumtours.pt/pt/tours/passeio-privado-sintra-2-2/" target="_blank" class="text-blue-500 hover:underline">https://www.premiumtours.pt/pt/tours/passeio-privado-sintra-2-2/</a>' },
+            'modal-link-van1': { title: 'Van to Hotel Details', content: 'TOPTOUR PORTUGAL®<br>+351217151675<br>Booked on Trip Advisor, For other questions, contact:<br>Viator Customer Care<br>702-939-9839' },
+            'modal-link-travel1': { title: 'Van to Porto Details', content: 'Notes: Aveiro, Obidos and Nazare<br>Confirmation #: AMF Deposit Paid<br><br><b>Van Contact Info:</b><br>Fernando Madeira<br>Lisbon Private Transfers<br>+351 968 376 643 WhatsApp<br>www.lisbonprivatetransfers.com<br>fernando@lisbonprivatetransfers.com' },
+            'modal-link-hotel2': { title: 'Accommodation Details', content: 'Details: All 4 under AMF<br>Confirmation #: Expedia itinerary: 73038457669454<br><br><b>Expedia Itinerary:</b><br><a href="https://www.expedia.com/trips/egti-FR2-87A-PRY9/details/NWNhNjY2NGYtZTAxOS01NDdjLTk5ZmYtZjNiMDgxMGZiYzE5O2U3ZjI3YzE5LTAwN2ItNGM0Yy04MDVjLTRiZmI3NDBkODQ3Y18wO2VnOnByb3BlcnR5OjQ2ZWRlMDBmYjg0ZjI4ZGYzNTE2ZTVmYWM1MDQ1ZDg4" target="_blank" class="text-blue-500 hover:underline">https://www.expedia.com/trips/egti-FR2-87A-PRY9/details/...</a>' },
+            'modal-link-activity4': { title: 'Activity Details', content: 'Notes: Leave Bac' },
+            'modal-link-flight3': { title: 'Flight Details', content: 'Airline: SATA<br>Flight #: S40173<br>Notes: LIS-Azores' },
+            'modal-link-hotel3': { title: 'Accommodation Details', content: 'Details: Jenn and Kirschner on one reservation - Shefman and Singer made separate resv<br>Confirmation #: Hotels.com 72060560675386' },
+            'modal-link-hotel4': { title: 'Accommodation Details', content: 'Details: All 4 under AMF<br>Confirmation #: Expedia itinerary: 72064522526321' },
+            'modal-link-flight4': { title: 'Flight Details', content: 'Airline: SATA<br>Flight #: S40283<br>Notes: Azores-BOS' },
+            'modal-link-flight5': { title: 'Flight Details', content: 'Airline: Delta<br>Flight #: DL2222<br>Notes: BOS-DTW' }
+        };
+
         document.addEventListener('DOMContentLoaded', () => {
-            const videoModal = document.getElementById('video-intro-modal');
-            const video = document.getElementById('intro-video');
-            const mainContent = document.getElementById('main-content');
-            
-            // This event listener handles the transition once the video has finished playing
-            video.addEventListener('ended', () => {
-                videoModal.classList.add('fade-out');
-                setTimeout(() => {
-                    videoModal.style.display = 'none';
-                    mainContent.classList.remove('hidden-content');
-                }, 1000); // This timeout matches the CSS transition duration
-            });
-
-            // Fallback in case the video fails to autoplay or is paused
-            setTimeout(() => {
-                if (!video.ended) {
-                    videoModal.classList.add('fade-out');
-                    setTimeout(() => {
-                        videoModal.style.display = 'none';
-                        mainContent.classList.remove('hidden-content');
-                    }, 1000);
-                }
-            }, 2000); // 2-second timeout
-
-            const modalData = {
-                'modal-link-flight1': { title: 'Flight Details', content: 'Airline: Delta<br>Flight #: 1707<br>Notes: DTW-BOS' },
-                'modal-link-flight2': { title: 'Flight Details', content: 'Airline: Delta<br>Flight #: 0124<br>Notes: BOS-LIS' },
-                'modal-link-hotel1': { title: 'Accommodation Details', content: 'Details: All 4 under AMF<br>Confirmation #: Expedia 73118888601825<br><br><b>Hotel Website:</b><br><a href="https://www.hoteldabaixa.com/en/" target="_blank" class="text-blue-500 hover:underline">https://www.hoteldabaixa.com/en/</a>' },
-                'modal-link-activity1': { title: 'Activity Details', content: 'Notes: free cancellation' },
-                'modal-link-activity2': { title: 'Activity Details', content: 'Notes: Nuno Tuk, 420 Euros' },
-                'modal-link-explore': { title: 'Open--Explore Lisbon Details', content: 'Possible places to explore: Pink & Green Streets, Arch. Note: via What\'s App' },
-                'modal-link-activity3': { title: 'Activity Details', content: 'Notes: Tour Booked with Carlos.<br>Link: <a href="https://www.premiumtours.pt/pt/tours/passeio-privado-sintra-2-2/" target="_blank" class="text-blue-500 hover:underline">https://www.premiumtours.pt/pt/tours/passeio-privado-sintra-2-2/</a>' },
-                'modal-link-van1': { title: 'Van to Hotel Details', content: 'TOPTOUR PORTUGAL®<br>+351217151675<br>Booked on Trip Advisor, For other questions, contact:<br>Viator Customer Care<br>702-939-9839' },
-                'modal-link-travel1': { title: 'Van to Porto Details', content: 'Notes: Aveiro, Obidos and Nazare<br>Confirmation #: AMF Deposit Paid<br><br><b>Van Contact Info:</b><br>Fernando Madeira<br>Lisbon Private Transfers<br>+351 968 376 643 WhatsApp<br>www.lisbonprivatetransfers.com<br>fernando@lisbonprivatetransfers.com' },
-                'modal-link-hotel2': { title: 'Accommodation Details', content: 'Details: All 4 under AMF<br>Confirmation #: Expedia itinerary: 73038457669454<br><br><b>Expedia Itinerary:</b><br><a href="https://www.expedia.com/trips/egti-FR2-87A-PRY9/details/NWNhNjY2NGYtZTAxOS01NDdjLTk5ZmYtZjNiMDgxMGZiYzE5O2U3ZjI3YzE5LTAwN2ItNGM0Yy04MDVjLTRiZmI3NDBkODQ3Y18wO2VnOnByb3BlcnR5OjQ2ZWRlMDBmYjg0ZjI4ZGYzNTE2ZTVmYWM1MDQ1ZDg4" target="_blank" class="text-blue-500 hover:underline">https://www.expedia.com/trips/egti-FR2-87A-PRY9/details/...</a>' },
-                'modal-link-activity4': { title: 'Activity Details', content: 'Notes: Leave Bac' },
-                'modal-link-flight3': { title: 'Flight Details', content: 'Airline: SATA<br>Flight #: S40173<br>Notes: LIS-Azores' },
-                'modal-link-hotel3': { title: 'Accommodation Details', content: 'Details: Jenn and Kirschner on one reservation - Shefman and Singer made separate resv<br>Confirmation #: Hotels.com 72060560675386' },
-                'modal-link-hotel4': { title: 'Accommodation Details', content: 'Details: All 4 under AMF<br>Confirmation #: Expedia itinerary: 72064522526321' },
-                'modal-link-flight4': { title: 'Flight Details', content: 'Airline: SATA<br>Flight #: S40283<br>Notes: Azores-BOS' },
-                'modal-link-flight5': { title: 'Flight Details', content: 'Airline: Delta<br>Flight #: DL2222<br>Notes: BOS-DTW' }
-            };
-
             // Attach event listeners for modal links
             Object.keys(modalData).forEach(id => {
                 const link = document.getElementById(id);
