--- a/index.html
+++ b/index.html
@@ -65,11 +65,43 @@
             max-height: 80%;
             overflow-y: auto;
         }
+        /* Video Intro Modal Styles */
+        .video-modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            z-index: 2000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            opacity: 1;
+            transition: opacity 1s ease-in-out;
+        }
+        .video-modal video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .hidden-content {
+            display: none;
+        }
+        .fade-out {
+            opacity: 0;
+            pointer-events: none;
+        }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
+    <!-- Video Intro Modal -->
+    <div id="video-intro-modal" class="video-modal">
+        <video id="intro-video" src="BROpen.MP4" autoplay muted playsinline></video>
+    </div>
+
     <!-- Main Content -->
-    <div id="main-content">
+    <div id="main-content" class="hidden-content">
         <div class="container mx-auto p-8 lg:p-12">
             <!-- Main Header Section -->
             <header class="text-center mb-12">
@@ -432,6 +464,30 @@
         };
 
         document.addEventListener('DOMContentLoaded', () => {
+            const videoModal = document.getElementById('video-intro-modal');
+            const video = document.getElementById('intro-video');
+            const mainContent = document.getElementById('main-content');
+            
+            // This event listener handles the transition once the video has finished playing
+            video.addEventListener('ended', () => {
+                videoModal.classList.add('fade-out');
+                setTimeout(() => {
+                    videoModal.style.display = 'none';
+                    mainContent.classList.remove('hidden-content');
+                }, 1000); // This timeout matches the CSS transition duration
+            });
+
+            // Fallback in case the video fails to autoplay or is paused
+            setTimeout(() => {
+                if (!video.ended) {
+                    videoModal.classList.add('fade-out');
+                    setTimeout(() => {
+                        videoModal.style.display = 'none';
+                        mainContent.classList.remove('hidden-content');
+                    }, 1000);
+                }
+            }, 2000); // 2-second timeout
+
             // Attach event listeners for modal links
             Object.keys(modalData).forEach(id => {
                 const link = document.getElementById(id);
