--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
     <!-- Main Content -->
     <div id="main-content" class="hidden-content">
         <div class="container mx-auto p-8 lg:p-12">
+            <!-- Today Button -->
+            <button id="today-button" class="fixed bottom-4 right-4 bg-purple-500 text-white font-bold py-3 px-6 rounded-full shadow-lg hover:bg-purple-600 transition-all duration-200 z-10">
+                Today
+            </button>
+            
             <!-- Main Header Section -->
             <header class="text-center mb-12">
                 <!-- Replaced the h1 with an image from the provided file -->
