--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 <p class="text-xl text-gray-600 mt-2">Lisbon, Porto, and Azores</p>
                 <p class="text-sm text-gray-500 mt-1">August 24 - September 6, 2025</p>
                 <p class="text-sm text-gray-500 mt-1 font-bold">Fishkind • Kirschner • Sheffman • Singer</p>
+                <p class="text-sm text-gray-500 mt-2"><a href="https://photos.app.goo.gl/f45Yw6yxGHazHu8JA" target="_blank" class="text-purple-600 hover:underline">Photo Album</a></p>
             </header>
 
             <!-- Daily Itinerary Cards -->
