--- a/index.html
+++ b/index.html
@@ -194,7 +194,13 @@
                                 <p class="text-gray-600">5:00 PM - 7:00 PM</p>
                             </div>
                         </div>
-                        <div class="flex items-center p-3 rounded-lg bg-pink-50">
+                        </div>
+                        <div class="flex items-center p-3 rounded-lg bg-purple-50">
+                            <i class="fas fa-route text-purple-500 mr-4 text-lg"></i>
+                            <p class="font-semibold text-purple-800">Open--Explore Lisbon
+                                 <span id="modal-link-explore" class="text-xs text-purple-500 cursor-pointer hover:underline ml-2">(Details)</span>
+                            </p>
+                        </div>                        <div class="flex items-center p-3 rounded-lg bg-pink-50">
                             <i class="fas fa-utensils text-pink-500 mr-4 text-lg"></i>
                             <p class="font-semibold text-pink-800">Dinner at ROSAMAR Rua da Rosa</p>
                         </div>
@@ -226,7 +232,15 @@
                                  <span id="modal-link-explore" class="text-xs text-purple-500 cursor-pointer hover:underline ml-2">(Details)</span>
                             </p>
                         </div>
-                        <div class="flex items-center p-3 rounded-lg bg-pink-50">
+                         </div>
+                        <div class="flex items-center p-3 rounded-lg bg-yellow-50">
+                            <i class="fas fa-walking text-yellow-500 mr-4 text-lg"></i>
+                            <div>
+                                <p class="font-semibold text-yellow-800">Jewish Walking Tour 🇮🇱
+                                    <span id="modal-link-activity1" class="text-xs text-yellow-500 cursor-pointer hover:underline ml-2">(Details)</span>
+                                </p>
+                                <p class="text-gray-600">5:00 PM - 7:00 PM</p>
+                            </div>                        <div class="flex items-center p-3 rounded-lg bg-pink-50">
                             <i class="fas fa-utensils text-pink-500 mr-4 text-lg"></i>
                             <p class="font-semibold text-pink-800">Dinner at Frou Frou JNCQUOIAv</p>
                         </div>
