--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
     <!-- Video Intro Modal -->
-    <!-- Note: The video source `BROpen.MP4` is a placeholder. You will need to use a valid public video URL for this to work. -->
     <div id="video-intro-modal" class="video-modal">
-        <video id="intro-video" src="https://storage.googleapis.com/backroads-2025/BROpen.mp4" autoplay muted playsinline></video>
+        <video id="intro-video" src="./BROpen.MP4" autoplay muted playsinline></video>
     </div>
 
     <!-- Main Content -->
@@ -110,8 +109,7 @@
             <!-- Main Header Section -->
             <header class="text-center mb-12">
                 <!-- Replaced the h1 with an image from the provided file -->
-                <!-- Note: The image source `TheBackroads Bunch.jpeg` is a placeholder. You will need to use a valid public image URL for this to work. -->
-                <img src="https://storage.googleapis.com/backroads-2025/TheBackroads%20Bunch.jpeg" alt="The Backroads Bunch 2025" class="mx-auto my-4 w-auto h-32 md:h-48">
+                <img src="./TheBackroads Bunch.jpeg" alt="The Backroads Bunch 2025" class="mx-auto my-4 w-auto h-32 md:h-48">
                 <p class="text-xl text-gray-600 mt-2">Lisbon, Porto, and Azores</p>
                 <p class="text-sm text-gray-500 mt-1">August 24 - September 6, 2025</p>
                 <p class="text-sm text-gray-500 mt-1 font-bold">Fishkind • Kirschner • Shefman • Singer</p>
@@ -349,11 +347,11 @@
                     </div>
                 </div>
                 
-                <!-- Day 8 - 12: Sunday, August 31 - Thursday, September 5 -->
+                <!-- Day 8 - 12: Sunday, August 31 - Thursday, September 4 -->
                 <div id="day-aug-31-sep-4" class="bg-white rounded-2xl shadow-lg p-6">
                     <div class="flex flex-col md:flex-row md:justify-between items-start md:items-center mb-4">
                         <div class="flex-grow">
-                            <h3 class="text-2xl font-bold text-gray-900">Sunday, August 31 - Thursday, September 5</h3>
+                            <h3 class="text-2xl font-bold text-gray-900">Sunday, August 31 - Thursday, September 4</h3>
                         </div>
                     </div>
                     <div class="space-y-4 text-sm">
